--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,9 +2,9 @@ name: Snake Contrib
 
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * *"  # 每天UTC时间00:00运行
 
-  # allows to manually run the job at any time
+  # 允许手动运行
   workflow_dispatch:
 
 jobs:
@@ -15,7 +15,7 @@ jobs:
     timeout-minutes: 5
 
     steps:
-      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
+      # 生成贪吃蛇动画
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
         with:
@@ -24,8 +24,7 @@ jobs:
             dist/profile-snake-contrib/github-contribution-grid-snake.svg
             dist/profile-snake-contrib/github-contribution-grid-snake-dark.svg?palette=github-dark
 
-      # push the content of <build_dir> to a branch
-      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
+      # 推送到主分支
       - name: push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
