--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,35 +1,48 @@
-name: Snake Contrib
+name: Generate snake animation
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # 每天UTC时间00:00运行
+    - cron: "0 0 * * *" # run daily at mignight UTC
 
-  # 允许手动运行
   workflow_dispatch:
+
+  push:
+    branches:
+    - main
 
 jobs:
   generate:
     permissions:
       contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 10
 
     steps:
-      # 生成贪吃蛇动画
-      - name: generate github-contribution-grid-snake.svg
-        uses: Platane/snk/svg-only@v3
-        with:
-          github_user_name: ${{ github.repository_owner }}
-          outputs: |
-            dist/profile-snake-contrib/github-contribution-grid-snake.svg
-            dist/profile-snake-contrib/github-contribution-grid-snake-dark.svg?palette=github-dark
+    - name: generate snake.svg
+      uses: Platane/snk@v3
+      with:
+        # github user name to read the contribution graph from (**required**)
+        # using action context var `github.repository_owner` or specified user
+        github_user_name: ${{ github.repository_owner }}
 
-      # 推送到主分支
-      - name: push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
-        with:
-          target_branch: main
-          build_dir: dist
-          keep_history: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # list of files to generate.
+        # one file per line. Each output can be customized with options as query string.
+        #
+        #  supported options:
+        #  - palette:     A preset of color, one of [github, github-dark, github-light]
+        #  - color_snake: Color of the snake
+        #  - color_dots:  Coma separated list of dots color.
+        #                 The first one is 0 contribution, then it goes from the low contribution to the highest.
+        #                 Exactly 5 colors are expected.
+        outputs: |
+          dist/github-snake.svg
+          dist/github-snake-dark.svg?palette=github-dark
+          dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+
+    - name: Deploy to GitHub Pages
+      uses: crazy-max/ghaction-github-pages@v4
+      with:
+        target_branch: output
+        build_dir: dist
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
